# bamboo-bot

./: Cargo.toml  Readme.md
src/: bambo_processor.rs  bamboo_client.rs  config.rs  days_calculator.rs  main.rs
src/model/: mod.rs
src/model/add_timesheet_entry/: add_entry_request.rs
src/model/get_timeoff_requests/: actions.rs  amount.rs  notes.rs  request_type.rs  status.rs  timeoff_request.rs
src/model/get_timesheet_entries/: project.rs  project_info.rs  task.rs  timesheet_entry.rs
src/model/get_whos_out/: time_off_entry.rs
