[package]
name = "bamboo-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.17", features = ["derive"] }
derive_builder = "0.20.1"
dotenvy = "0.15.7"
envy = "0.4.2"
itertools = "0.13.0"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.39.3", features = ["full"] }

[dev-dependencies]
wiremock = "0.6.1"
